added signup and login

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <!-- Header -->
     <header
       class="fixed top-0 left-0 w-full bg-black z-50 p-6 w-full flex justify-between items-center border-b border-gray-800">
-      <h1 class="text-3xl font-extrabold sm:text-left text-blue-500">Linksy</h1>
+      <h1 class="text-3xl font-extrabold sm:text-left text-white">Linksy</h1>
       <nav class="hidden sm:flex sm:items-center space-x-6">
         <a href="#hero" class="hover:text-white transition">Home</a>
         <a href="#how-it-works" class="hover:text-white transition">How It Works</a>
         <a href="#feedback" class="hover:text-white transition">Feedbacks</a>
-        <a href="" class="p-2 bg-blue-600 rounded-lg font-semibold hover:bg-blue-700 transition">Get Started Free</a>
+        <a href="./getStarted.html" class="p-2 bg-blue-600 rounded-lg font-semibold hover:bg-blue-700 transition">Get Started Free</a>
       </nav>
     </header>
     <!-- Main -->
@@ -32,12 +32,12 @@
       </p>
 
       <div class="flex flex-col sm:flex-row gap-4 mb-6">
-        <button class="px-8 py-3 bg-blue-600 rounded-lg font-semibold hover:bg-blue-700 transition">
+        <a href="./getStarted.html" class="px-8 py-3 bg-blue-600 rounded-lg font-semibold hover:bg-blue-700 transition">
           Get Started Free
-        </button>
-        <button class="px-8 py-3 border border-gray-500 rounded-lg font-semibold hover:border-white transition">
+        </a>
+        <a href="./login.html" class="px-8 py-3 border border-gray-500 rounded-lg font-semibold hover:border-white transition">
           Login
-        </button>
+        </a>
       </div>
 
       <p class="text-gray-300 text-center">
@@ -70,7 +70,6 @@
     <footer id="footer" class="pb-20 text-sm text-center text-gray-500">
       &copy; <span id="year"></span> Linksy. All rights reserved. | Linksy created by Emran Khan
     </footer>
-
   </div>
   <script src="index.js" type="module"></script>
 </body>
