--- a/getStarted.html
+++ b/getStarted.html
@@ -17,7 +17,8 @@
       <div class="w-full max-w-md space-y-6">
         <!-- Header -->
         <header class="text-center">
-          <a href="index.html" class="text font-bold mb-4 text-gray-500 inline-block">What is <span class="text-black">Linksy?</span> <span class="border-b-2">Click here!</span></a>
+          <a href="index.html" class="text font-bold mb-4 text-gray-500 inline-block">What is <span
+              class="text-black">Linksy?</span> <span class="border-b-2">Click here!</span></a>
           <h1 class="text-3xl font-extrabold mb-1 text-gray-900">Join Linksy</h1>
           <p class="text-gray-600">Sign up for free!</p>
         </header>
@@ -25,15 +26,18 @@
         <!-- Email Form -->
         <form id="get-started-form" class="space-y-4">
           <input type="email" placeholder="Email" required
-            class="w-full px-4 py-3 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-500">
+            class="shadow w-full px-4 py-3 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <input type="password" placeholder="Create password" required
+            class="shadow w-full px-4 py-3 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-500">
           <button type="submit"
             class="w-full bg-blue-600 text-white py-3 rounded-lg font-semibold hover:bg-blue-700 transition">Continue</button>
         </form>
 
         <!-- Legal Text -->
         <p class="text-gray-500 text-xs text-center">
-          By clicking Continue, you agree to Linksy's <a href="#" class="text-blue-500 hover:underline">privacy notice</a>, <a
-            href="#" class="text-blue-500 hover:underline">T&Cs</a> and to receive offers, news and updates.
+          By clicking Continue, you agree to Linksy's <a href="#" class="text-blue-500 hover:underline">privacy
+            notice</a>, <a href="#" class="text-blue-500 hover:underline">T&Cs</a> and to receive offers, news and
+          updates.
         </p>
 
         <!-- Divider -->
@@ -63,8 +67,7 @@
     </main>
 
     <!-- Right Side: Desktop Hero -->
-    <aside
-      class="hidden md:flex w-1/2 bg-gradient-to-br from-blue-900 to-blue-600 items-center justify-center p-12">
+    <aside class="hidden md:flex w-1/2 bg-gradient-to-br from-blue-900 to-blue-600 items-center justify-center p-12">
       <div class="text-center px-4">
         <h2 class="text-5xl font-extrabold mb-4 text-white">Join Linksy</h2>
         <p class="text-white text-xl">
@@ -74,6 +77,7 @@
     </aside>
 
   </div>
-<script src="./getStarted.js"></script>
+  <script src="./getStarted.js"></script>
 </body>
+
 </html>
