signup, login, erorr message handinling done

--- a/getStarted.html
+++ b/getStarted.html
@@ -21,6 +21,7 @@
               class="text-black">Linksy?</span> <span class="border-b-2">Click here!</span></a>
           <h1 class="text-3xl font-extrabold mb-1 text-gray-900">Join Linksy</h1>
           <p class="text-gray-600">Sign up for free!</p>
+          <p class="text-sm pt-2" id="message"></p>
         </header>
 
         <!-- Email Form -->
@@ -77,6 +78,8 @@
     </aside>
 
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="supabaseClient.js"></script>
   <script src="./getStarted.js"></script>
 </body>
 
