--- a/login.html
+++ b/login.html
@@ -18,12 +18,15 @@
         <header class="text-center">
           <h1 class="text-3xl font-extrabold mb-1 text-gray-900">Welcome back</h1>
           <p class="text-gray-600">Log in to your Linksy</p>
+           <p class="text-sm pt-2" id="message"></p>
         </header>
 
         <!-- Email Form -->
-        <form class="space-y-4">
+        <form id="login-form" class="space-y-4">
           <input type="email" placeholder="Email" required
-            class="w-full px-4 py-3 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-500">
+            class=" shadow w-full px-4 py-3 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <input type="password" placeholder="Password" required
+            class=" shadow w-full px-4 py-3 rounded-lg text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-500">
           <button type="submit"
             class="w-full bg-black text-white py-3 rounded-lg font-semibold hover:bg-slate-700 transition">Continue</button>
         </form>
@@ -50,7 +53,6 @@
         <!-- Reset / Forget -->
         <div class="text-center text-blue-700 text-sm font-semibold">
           <a href="">Forgot password?</a>
-          <a href="">Forgot username?</a>
         </div>
 
         <!-- Login Link -->
@@ -72,7 +74,9 @@
     </aside>
 
   </div>
-
+ <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="supabaseClient.js"></script>
+  <script src="./login.js"></script>
 </body>
 
 </html>
