added script for supabase

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <a href="#hero" class="hover:text-white transition">Home</a>
         <a href="#how-it-works" class="hover:text-white transition">How It Works</a>
         <a href="#feedback" class="hover:text-white transition">Feedbacks</a>
-        <a href="./getStarted.html" class="p-2 bg-blue-600 rounded-lg font-semibold hover:bg-blue-700 transition">Get Started Free</a>
+        <a href="./getStarted.html" class="p-2 bg-blue-600 rounded-lg font-semibold hover:bg-blue-700 transition">Get
+          Started Free</a>
       </nav>
     </header>
     <!-- Main -->
@@ -35,7 +36,8 @@
         <a href="./getStarted.html" class="px-8 py-3 bg-blue-600 rounded-lg font-semibold hover:bg-blue-700 transition">
           Get Started Free
         </a>
-        <a href="./login.html" class="px-8 py-3 border border-gray-500 rounded-lg font-semibold hover:border-white transition">
+        <a href="./login.html"
+          class="px-8 py-3 border border-gray-500 rounded-lg font-semibold hover:border-white transition">
           Login
         </a>
       </div>
@@ -71,6 +73,8 @@
       &copy; <span id="year"></span> Linksy. All rights reserved. | Linksy created by Emran Khan
     </footer>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="./supabaseClient.js"></script>
   <script src="index.js" type="module"></script>
 </body>
 
