--- a/getStarted.html
+++ b/getStarted.html
@@ -79,7 +79,7 @@
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="supabaseClient.js"></script>
+  <script src="./supabaseclient.js"></script>
   <script src="./getStarted.js"></script>
 </body>
 
