--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="./supabaseClient.js"></script>
+  <script src="./supabaseclient.js"></script>
   <script src="index.js" type="module"></script>
 </body>
 
