--- a/linksy.html
+++ b/linksy.html
@@ -13,6 +13,6 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <!-- Supabase client -->
-<script src="./supabaseClient.js"></script>
+<script src="./supabaseclient.js"></script>
 
 </html>
