--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </section>
     <!-- How It Works -->
-    <section id="how-it-works" class="py-20 flex flex-col justify-center items-center space-y-6">
+    <!-- <section id="how-it-works" class="py-20 flex flex-col justify-center items-center space-y-6">
       <h1 class="text-3xl font-bold text-white">How It Works</h1>
       <p class="text-gray-300">Watch me guide you through how to use it step-by-step</p>
       <div class="w-full max-w-3xl aspect-video rounded overflow-hidden shadow-lg border border-gray-900">
@@ -67,7 +67,7 @@
           allowfullscreen>
         </iframe>
       </div>
-    </section>
+    </section> -->
     <!-- Footer -->
     <footer id="footer" class="pb-20 text-sm text-center text-gray-500">
       &copy; <span id="year"></span> Linksy. All rights reserved. | Linksy created by Emran Khan
