--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
       <h1 class="text-3xl font-bold text-white">How It Works</h1>
       <p class="text-gray-300">Watch me guide you through how to use it step-by-step</p>
       <div class="w-full max-w-3xl aspect-video rounded overflow-hidden shadow-lg border border-gray-900">
-        <iframe class="w-full h-full rounded" src="https://www.youtube.com/embed/ydEpPwmmMsQ?si=TjSkA90ZwRs9QFv1"
-          title="YouTube video" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/ydEpPwmmMsQ" title="YouTube video" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
         </iframe>
+
       </div>
     </section>
     <!-- Footer -->
