reset section added

--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
 
         <!-- Reset / Forget -->
         <div class="text-center text-blue-700 text-sm font-semibold">
-          <a href="">Forgot password?</a>
+          <a href="./resetpassword.html">Forgot password?</a>
         </div>
 
         <!-- Login Link -->
